--- a/aejynmain/UserControls/UC_Dashboard.resx
+++ b/aejynmain/UserControls/UC_Dashboard.resx
@@ -117,4 +117,190 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsIAAA7CARUoSoAAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAADRUlEQVR4Xu2ZPWsVQRSGo5iAWCTaSFRQoiCC/gDBUsQihR/EwkawEKMWprBTsRFtLMQPIqIWRpDY
+        aWUjYiMoaKvESgS1FBUEPx45MlfOnrt75+7uzN4NzAMDIe+cd84edvfNvRkaSiQSiUQikUgkGgNYD+wB
+        pgKtHcBSe04rAaaBn4TnGbDCntcqgDHgu+08ICftma0C2Keanc25lausA8AP5/nEntkqgOtqAFutXhXg
+        qfOUQSy3emsA3rpGPwFLrF4V4Iwa7E6rtwJgrWryntXrAGxX3hes3gqAQ6rJw1avA7AM+OK8X1g9OBVz
+        /LEawIzRauc48NB5/wJWWj0Ybc1xiUDltdfqQWggx2fsmf0CbFM+V60ehAZy/D0wX3E9AP44n4Uoj0ED
+        OR6Sr8ANYLM9rzLAG2f+MXCOnzbNh0ReilfqvmSlyXXKNGaOX7R6GYBR4JR7nDRH7N5SNJjjL61eBWAY
+        OKh6nrN7SgHcVWYbrF4X4JHzllt2ldWronqet1opgA/OaMFqIYiV48qz+gCALcpo1uohKJPjLj6/qf0a
+        icDVam+HWgM4oYxe5WRwiNV3jgO3VD957FJ7O5QfADABXHaZ2jRyppw9kdPXJuBOzhBlnZeXqtrbof8B
+        SGbKbeheSIOmVo4rn1IDOKoKBclUydZRuzc0oXNc1ZcawJwqlCwdtntiEyrHVX2pAciz9A+rNY26gOc5
+        H6T6WR3uW+9CWjqAupy13oXkDQAYB95lPf8jmbw/61JMxRyvg0T3WLaLHhQMYHfWs4ubWZdiKua4fQQu
+        KU1+tre+1qeyHXgoGIC8lCRjbe7Kug1szLoUEyLHzfPddYE+vSd5AxgU6iLSAMzve16gT+/JIhnApNKm
+        teb040qftHpPJDNVsX25NL06ZHIcWKP+VJd/tR1TNXLxn50me8Z1rRfgnDq4LXTlOHDNbsqh50frXNz3
+        /6+t0wDJzXFgxH1T/dsWqA9RI7auL8zt58vZPN23fPV957h7HOSd0KmVn8vd9hZnVNiAT/fhq/fp0fE1
+        4NN9+Op9enR8Dfh0H756nx6dqDnbgH9touZsA/5BiJazjtj+tYmasw34ByNKzipi+ycSiUQikUgkEt38
+        BZ3xfGPs1MczAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsIAAA7CARUoSoAAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAACyklEQVR4Xu3aO2gVQRTG8RAjqGhho3WaqLXEUkQFFRsf+Gq008oH6ZRgbLXzVYhBIY1VQkCsrIwg
+        iJ0PBCtBC6OFD9SIgn85cgr5mLmsuXN3b27OD6bZzNn55iQhs5vb1xdCCCGEEMK8AAPA6obGgOapDbAF
+        mAF+0hxb+wGwWfN1FLAf+KVpGmSN2Ks5OwJYBcxqgi7wzrJp3uKAE7pyFzmueYsDHuqqXWRG8xYFDAK/
+        dVXgGrCx5nFdQ3i2Qc1dDDCqK7r1OrfTgCEN4UZ1bjHAS10NeKzz6gI80TDAK51XBDCsK7mTOrcuwGkN
+        44Z1btuAK7qKnwXW6ty6AGsyB7HLOrctfty1v7Pqrs6tG3BPQwHvgaU6Nwno9x/v7Ymxyb++W1dwh/V+
+        dQOOaChnmS277UH3ZcP23G83OKeV4jxwRy8Cn4HlGqhuwArgi4bzzGN6UZy1GzzTq+I18E0vArc0TFOA
+        2xoO+O7ZW3lqxXN6taKtGqQpwDYNV9GcFc/nwebN39+fLuG/6281ZAWzVjylVyu4qCGaBlzSkBVMWeEG
+        b8L9xLDvdMrRxNm86XFMQzrbg+7Lhu05f4QHLgA/9G4LkO1hTPfXEnBI79IDDuo+s4AJre4BE7rPLGBa
+        q3vAtO4zK9OA5358XKLzDbAM2Ad80sKCPtrLT1tL1zeWzY++L7SwRAMqPWICI1pY0BldL8WboNpuwEqd
+        lwLs1MKCduh6KZZVC0s0oNKTX+ZdXSlXdb2UzBNi2w346meDXYlHSxt7gPHMS9NS7N43fS1d34Zls4yp
+        h7e2G7DQRQN0n1nRgGhANCAaoNUZj4AbDQ/LUEVHGjCitXX7j6N3NEBrs6IB0YBowKJvwKRWZ5zS2rpZ
+        Bg2VMam1Wf5WOPV/93/Zv6CHtLZuwDrgg4YTtpcDWtuSv+PTj6Z2x8dURYWP6ybfIYYQQgghhMXsD4Up
+        o4/wKMH+AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pictureBox3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
+        wQAADsEBuJFr7QAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAAToSURBVHhe7ZtL
+        yFVVFMftYQZFD8OksEkNpBJqUE0ieplkk5JeDgqaRWCBNgiyAoPUCsRyUA2KiB6aREShDapJjQqCyB5Y
+        ZFZKDpJKs8T0F/+PdWDzv+ecu+/r3Ef3B/J93rXX2uu/7zn7sc75Zs2aMmXKlIYATgLuBLYA3wN/AYfj
+        9zfCNtv9JgLgNuBH2rMbuMX9xxbgeOBZV5nBBvl6vLGjS/EFGzzeWBGXfa+M5+0AzIn7uVcUY/wmRmC5
+        K2nDMWA98IIbgDs8/sgDbHYVNUj8/eE3z43A6x5/5AF+cBUVSPwD4XMy8L43AL7z+CMPcMhVAFcBlwH7
+        4v854sUhjz/yAH+6CokP26IYhFT8dm+ccNDjjzzAt64iRC8K+5nxs514sdPjjxSx5K0CPgOWxmevuYog
+        HYQc8WJztF8KfAqs1LnC8xgKwGnAJ0myM7s34PbkM0eDcB/woRsqWB4xtT0u+Fh9ez6NAzwfCWnWvwk4
+        JT6frdk7SbhbdICa+bYVO/rYFbbnPJ9GARYA/8aRdmGJfZmJ6YZlJXEXRp/qe4HbGwN4LJKs3KgAT5mg
+        Ttjo8QqifiAedVsjAMdFIUNc7faCOA53Mwgb1YfHKwCuiXa6HZo/NgNLIgEtd5WJFuhUlzkn6PBzq/uX
+        AXwVPje4beAAb0bnK91WRUyMWh1eBb6JktjfMdGpTKaS2Bz3qyKWQ7HFbQMFOAv4J5Kf6/amAM5I6orz
+        3N4TwAXA3bFePxQbnbtiG6vfxSvu1zTKIXJRTspNOT4YOa8IDee7Xy1xv+obrkKjLq5036ZRDpZTGdJy
+        s/tWAnztEUr40v2GhXLx5ErY4X6VAL+7dwkr3G9YxKXejv3uVwnwlnsbB4HT3W9YKJfIqY6t7lcJMB94
+        GzjgUYIX3WfYKCdPMpAGaTnbfbKJR1pau8eFrTpqu46uAE7NPLOPGh/1fJsC5wCfe+QxQqvDea4rC+DC
+        zIeZo84e4BLXV0tsLvZ7pDFGWvI2bbEF/s0jTADS1H5LXLOcTALtl++k3iYqCx0FURc4Eu1/0cTpbfoF
+        cC6wN/pSn0u8jZMUTsRut7dgO6qsZQRYG+1/7tv6W0KU3zXIYq3by4gjc8EBt7eQfJviereXEYntCJ/1
+        bu8XwLroQ31lFU5ULUr0HHZ7C8DRxOE9t1cRz/w0eKrUXuH2XlHMiK9/l7u9CmBboueI21tIGhc84m2q
+        SF6HUa2ub7eCXWGb3F6FKsaJDnHU27RgDgXvAtcWDz3KAE4EXkp8Nukzb9cpEfeZJO7LdW+MxMOT63T1
+        Jj4Fx7x9C+4xYXR9BUwKWQOglxYmlawBSFeBSSNrANJ9QKc8CZzgMftJjw9cswbgV/fKRAM33+MNgsyq
+        dRn7PFYLtnHohHfC/2I39JF7oo81bshkm+ttAVjc5UQ480ATeNoNfWR79HGRGzKQpqytvTpY3eEgqOCg
+        3ZoehReHlUGg22ymugt84cYapGW166wlroQPgD88Wgkzr6oAN7phANwbfT3shhKUuzQsdn21jMTLR32m
+        I01RSNTrL5fW7f9HnTgXSIO07HF7JV3sBQa69pcR800ntD8KF3T4nv9e92+KpDyWwy73rwR43L1rWOf+
+        TRF/X5DLGvevJN7l0SD85FESVP97YpivrMYzS9UjlUsV0qCNU2UNYcqUKf9f/gMmH1KE03ZPmgAAAABJ
+        RU5ErkJggg==
+</value>
+  </data>
+  <data name="pictureBox4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsIAAA7CARUoSoAAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAAGLUlEQVR4Xu2becgWVRSHM5NMK9ozytCiovyjXWghyjIy2pQKKyrRMiKjsDQkLbGFSltowfqjFYlW
+        2ouSklKCCsuiPVQq2mmj3ZYnzteZr/v9vHPnzvu++n7K+8DgO9+c3zkzZ2buPffecZ111jCAXYGrgRF6
+        bJUCrAfsAhwEjAWOAvYCtlDbVgP0BY4G5gP/8B9L1K7lAH088N3Atx5YsRN6BZgGbKs+mgHYBrgI+ESD
+        OvuppmWYc2CRRqzgV+AqYBP1l4sn/TDgAeBPDSDco/qm8ROYqZFq8qm9Huq7CuBU4EN1luC3lr6CwAbA
+        kxqlQX4CjtQYKYB71UkGU9RPQ/idzz2B44Bn9Y8RfgH21FgpgL3t0QZWqLMSlgLrqp/aeGNTxefAtW5/
+        gLTKZXzcyGMKbAfcqc5KGKX6WgCD/X1K8Yw1btYduqb492TgdzUWbtKYOQCXq6MSHldtLTIybY3ahv54
+        LnPNdGC2vzpXqkD4A9hR41YBLFZHJfwNDFF9FsDmGd3NxcD6/jjjuqKnGA0M6mke5TqNncJfgbLXy85n
+        PPBm8LdZ6iML4PTASRnHWGNW7LiuSMBc3//uf/MoSzV2CmCqOnAsKdsHdiOA++w6enrIBHhQI0SYYFWe
+        P2qagB+AO3qal7Kbxi8DeEfFziK1bQrgDY0Q4RG3vdl2/HcjxdKxGj8GMFKFAZPUvimArzRCCWO8wRvv
+        unOKJ6IGZ2v8GMBTKnSst9la7WMAc7LanYwurMAaSmv5u/t07z6fVsME03pGXxl7TRKNX1btDxwRaMbo
+        8R54F1eHFa6zanC4D1VfUKMSup6eFMBDKgrYV+0VYOOit3K+sVGl2nUDvBoYZ+E6awOs1N3JE5FDsmKz
+        C0zc/YVqHwO4VYVetvdR2y6A29U6whPWEBY7risawSv8KaiqJO3CBmv8EOB5FQWMVnsFOCSRwLPUvgtr
+        mdUywihg92LHdUUCrvd96w5TLNbYIcApKgiwpzR+Bx1gAPCRCgN+BnZWXSG0oWuKGX6X37Yd1xUJsEJk
+        SE/zKNM1dgGwWUVvdKhqFOAGFUV4DeinWhNfppaCVXlb+oW+5JrzrSv037H3LuR7u0iNWwDcpYKA59Re
+        Afav0SXPUL052Aj4Ui2FJcDQiPa8jOBTVVcAnKTGAdb17qGaEKA/8J4KE9g8wz7qxxzZoKbqQqxmeNgL
+        IpsVTr1zBS/bQErjGcAOwI8qCJitGsXnIOtiCRugvsyZFTo5XFO0BxVYjTFI4xjAQOB1FQQsi55kgN3J
+        jJFsGTeqP3Nod3ZWoiupwwe2jqAxDJvCCrvVEg5XXYivU6QSWIVdY7wuAU6oeDSrsFp+U/VbYDW6CoSV
+        744ATFZRA3RN7kTxiRJ7v6oKnJB3LXnqKwS4VEXCi9GuSvAVqtuCbYE6imBzmqFmsvpdCRt9AWfYvBvw
+        GfBX4NDqh7e8TTiwanYWuCDQxrATLK/bEwDj1FmEBaqrjRdEtmQ1UI+lAC7RsxFsXFE52CljtSWgLp6w
+        uXomgvXNtRZRlF6ZAB+a2kAqhb1SJ6q2Lr0uAcAw4H09A8G6ojNV2wi9KgE+srPRVwq785UTJLn0igQA
+        W/mydhVWUh+v+mZoewK8ePpaI0awrnOk6pulbQnwScyqsrbAyuNh6qMVrPYE2OwKMC9jBFnwqPUK6qcM
+        9z8xsVk70z3KXG0JCJatw4owhdnZWl5ySkvJ/P5gbGC/ahPgpW7Odzshy61mV185ZNb24wL71ifAZ4om
+        1ZxxMey1uMWW1NVnLm1PgE8xV830xrA1/eHqry5tTYB/C5CapY1hsz82auyr/hqh3QnIXekxvgAutC/M
+        1E8ztDsBNv1dNS1m3/NZd9Rf9a2grQkwvI+PsdCXypOTHyH2fVDG4st80bQ9Af2Ac73Ke8zXAKOTnFUA
+        B+uZRFgumvYmoJV0ErC2JcDn9Yf6yk5s6/6Ky+3XugTYLHAVEwP7tS4BVV+WGjMD+04C9GCETgIkRicB
+        ahChk4DAvpMAPRihk4AwRsN0EtBJAFP8P0ylttMCe/vIUo/rNk9i2NfeaqNb92c09jtyXLc5YYwOOfi8
+        wP2RbK7pW/zbYcW/xrLZIXWwpm8T7Pr+BUuRj84GgbO5AAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pictureBox5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsIAAA7CARUoSoAAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAAJ/ElEQVR4Xt2bCfB+5RTHQyWJQotIY6lIFKGSKUKZ7MkULWSZCmMKYSYto0iLLBmhJFOSZJR1sjYh
+        BtOohGwpIdmyVHYf8719zzvnnt+73Ht/7/v/1/8z85t/nWe5z33u85xznnOed7XVVgLAzsBngZuAW4Hv
+        Ai8H7lzrrnIArwb+y3g+AdyltlllAHZIL/934CzgvcCv0iQcXtutMgDn+SX/CTwuydcDfuyy36+yqwC4
+        1i954ZiyV7pMbFHLVwmAP/kF3zOm7JlpAkar4w4PcCfgYcBLvO/FX4BrPCH6+yVwQ5qAtwGPucNuBWAN
+        YHfgQ97TQ/kr8BnghcDa9Tm3O4ANgCPL18z8C7gc+ALwMeBU4BTgI8DngW97dYzjb8DpwGb1uSsd4B7A
+        cXZqMnrhT1vBbQfctbateMts4a/+4aQ3gv94wjavbVcKwH7Ab8sg5dkdDNyn1u8LsCbwdE/k/9IzpE+0
+        2tasbVYIejng/DQgcZm0+Zi6awFPAt4EnOOl/nPgd/7CUohXAp8EjgeeN27ygEf662dP8irJa92FAmwN
+        XJcGIUW3t5ZvqqMv91zggjFbowt6yW96+9y7PH9H4PuprpTlc3KdhWHtrgcGUl4bp/K1gUOA61OdjJyh
+        LwLnJpm2jA5HPwD+neTBLcA7gfun58jSHJ1Wg/49PH+EuQM8y4pNaD8eVr76HmVliD8DZwB75mVtxRkc
+        luR383bRVtDWyGgi9JKjfW8HKluO46NsrgC7Af/wQzQJ+6eydcfog6uBl+mF2j3dhixC+tqvqOVCx2Pg
+        qV4xGS3/h6d6W5XJen27p2UCbJmWvbTvSNFZMUmhBdIHB3bx4oB9gLdrNdSyimMI8iGCm2UqU/kD06lS
+        q/Ol7R4G4qWqvRmMOga2B/6Qyi4B7tfuYX4Aq3trhDnUv6Ov7ZUQ49FqfVS7hwEAH00veEKSSxNrT8ZA
+        5L+v3m69GIDnl32fJ0HjCj0lE7lWu3UPgBekh0jbN8vaM509ND1wz9q+C0McGWD9Ygb1AV6UyuUgBe9q
+        t+6Il354eDcCG1m+Tgpe6MFxwtMkPL72Mw3g615F29WyadhsBnKNhcbxaJdrq8iHEDKP29Q+ZmLfPsjK
+        RmGsQAps1+TovLjdy2SAu6d+RmZwFn65UMhn200OX+An6tf1dJ6IrfCp2s9UgHulh1watt6mMNAMr2G5
+        PENtl5maP/BKCnqZLX1pYK+0JaV/gpEfAJxmmVZq91VmZyPYzTJ5XpphIQW0aW3Xh+VMQMWr4lvuS/HG
+        h1r+gOS7XFDbjcXH0Z+60RVJfoBl4uh2q/7McwKEtX9wdpKfYNlZ7RYTcOg6ONQyTcqPLJOdvWdt15d5
+        T4CwpRLyMB9smcb+iNiuMwHe4k6kWO5rmbyw4A21zRAWNAGKIwbH1PJOJBNzWZJ90DLtp9bRdCiLmACR
+        dMEvep8MHbgI03GiZVpC4Q8siecPZYEToNRbsHWSy6x/T9uh3SIBPDY13tsy7Z/goNpmKAucgM1Tv4ck
+        +R9nPsuByKCZKWdtgy1rm6EsagJEOhWel2TPAE6Sj9OunQDemAbVHFHt7Ql5e50dnVl4QIFC5OvUOkMB
+        Pud+L69lUwFOdsObk+xCy65q1x4OcKz7zOjIvUGtOwQdgNznLbVsKk5UiBuTTGd8oX/lIi/rS+mMns7z
+        8ih/5v8Wp9b6fbC3qjG+OfU5ykUA2071YJO5uz7JFOrOaPAHt1t2J20z9bOZrcxFll1b63cF2HBCRmp9
+        lyvOKHSMH59mc+RV3JRkdQLEkuxuVxzJFZqA5ms46SFuqPW74hhFTpwEzbZyoiZoHLwlAEe5grzAOAFe
+        bJkOQor16UwwM4Y3CafI4viq+KFscyAnbPA9IeApHqNyEUETEQJel2TjXfniRKxrWSjBa2r9oZTja+XM
+        5UyCSErw1iR7q2U6J4y3ZsC+aSCNF5XMoCIvOR6vJaf098cVum511AHg2Z7cr3hwOcSloMv4QXbAKXVx
+        ZZJFIOe6du2ENXSwn2W62BBsZdnGybMSmpyda399cGr9itSn7hMNCrKmrNT5SRZnhEvatRM2IxHeOsmy
+        bfz/onEtnbYOIuCg5ObgryYc7Mw64cxaZxbODwSvtUwBk3ivU2qbFmmmLvb/y0z9xrIvFyUmZaOMbzA2
+        w9MHnTaT5dGge53oymWrJi+gO0dJNooej0UmzhV1KlzPMu11oXBTDE5f/iE+QeroKaTVJ/vaHbEzo0hO
+        71C7I81C944aZQocYZmY7AgJ4Gmp8j6WPTnJghx8VKIieHerwxWIT67hCxyX5LqPIGa7894vurggmtOU
+        t8EPLRPaEi1fIPkLWjlzOzX2wRcshJRyc4VGSdQ07mNrm7EA73MDLfkm9w98IHV0gGU60em4rAmSsowk
+        xUW1z0XjPGV8/XOTPHyCxvVut5pAiQHKRkuzRgboO05bb5SU4e5u9/7UbslVmUXh8XzNz5WjE+ZaClW3
+        y8SXarupJGugKHD46prFHV2uzEuwr2Wy5boCL5Q+653364LMbb53UHKB70jyON6LXUcddKEow+CcVL5k
+        Aix/TZJ3Tnl1xdtNq1AmUsp3l7T1dEkiAjm6txAXMC6t/XTCabFAFxI2SWWTJkDOVOQQdD2mSarOCytp
+        9SukcOM+gPRVk/7yJIU51KrdofbTiZIiO7KU5eDjKHnqMl2kCk7PZfOgJGSDA1N5Pvqe0W7dEd/hD3Oo
+        m12tuz6+Bif7qgDkEucixeWkKLet5cvB2zPfTBml6hzZDoWtsTXOXG+kTNID9qrls1CCMuUYpKF7ubTj
+        8PKXVQrro+V9RCrfNB2E9Oyd2j10pAx+8ulpBkULN3mGUq5TZae0tYMd+WKEvnK+r6SQWFzcEKOcQG/S
+        8pV2bW5dDKFsI90fzKZLtvvXLtuj3fI2rMx2cswgo+jUaFz2U/LLn9zuqQe+cRGcVssDv4COxTohTswX
+        OkQVHJXk+YbIKOHqZa5Ut7Zg/MQm0AHsmDKRymbHRApdihi23WzCdMFRyNRsWOsECiymh070+uy0xBlf
+        K0p3D3TxUaGvQOZWAZCw7xWZOLniD0r96gMc6rJAV+iGvbwoTkwTTJgG8ConHad6fMATU7990MVIXccd
+        3UV2fzrghJ0XWhmDQ/UN/vrx85a5u7GOHQYyT1q2cq6kbBVe077WylA8Yv98MTr1sYmXeL5QLe9v+T+y
+        sh8fKECpAc/zLw4ronMQ1YrwCf6dQV7u2k7SE82tsLmQDkCLRFZhanrNJk1RYyVq6u1zocPZKPc/N2yX
+        FT6WL68L0EP/Jv3wSSh8ppvlWupSWvo70c9V/rFq/kBfX6tg+zru2x2+Cq/fDuhF4+AyBC3zr1rZzvVQ
+        tcKwGdTlJf2KRAETOTUyhfLl5c3pyyqpqZDbN7wSVFf7fn77ewL/B0MyfJyz4pGwAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <data name="pictureBox6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsIAAA7CARUoSoAAAAAZdEVYdFNvZnR3YXJlAHd3dy5pbmtzY2FwZS5vcmeb7jwa
+        AAAGmUlEQVR4Xu2baaxdUxTHW1SNKVWEig+INK0pJKoxK4IakhIUlQhBJSQSQzStEv1gSBGi5YsgQiKh
+        NUSMVRWlVUUbquYhRc1jVQ0/+T//XTur9/a9c8859z7yfslO3jlr77XW2e8Me621b79+ffTRR6cANgE2
+        jOf/dwBbAKcANwOzgS+AVfzL78By4FngVuBEjYl6/lMA6wNjgaeA1dnF9hRNyuPACcAGUX+vBegPjAc+
+        DBf0OnANMA7YFxiSyfS3zkk2FXgjk4n3Lesf7fUqgN2B+ZnjnwGXATvFviJ1iueFxgCXW0fiZWBY7Nsr
+        AM4DVtrRr4BL9JKL/XLSVcXzOX5RXgp87e6/yFbs1zGA9fziSjwMbBn7NcIvxNnxfCOAwcAjmZ0bZTv2
+        ayu++HvtkF5aut1re079ftFjIVvi7jrtdQtwU/Yf+QjYPvapGtmwrcS02KctAOfagT+At/33siKTAJyk
+        Fs83wxcvG0I2ZVucHfvWCrCrX0biCj+fr/p4cezfDK8PVsfzzQCW2IZsyeZEH/8sn2L/WvBz+KINP5qe
+        QTs0F5gTxzTDOtb5FcgBnreNwT7WO0iLJTE39q8F37biW2CrKC9C0QlohBdR31nV2CivFC9vl9rYxCgv
+        ShUTIIDJViXf6vsqAEfbkBY6m0d5USqcgM2AFVZ3ZJRXBvCQjUyOslaoagIEMMXqHoyySvAs/2Yjw6O8
+        FSqegBFWp6/TxlFeGuAYG1gWZa1S5QSIbD1yVJSVBrjOyq+PslapYQKmWeXUKCsN8JiVnxxlrVLDBJxj
+        lTOjrDTZEnTPKCuKnlFgRpoA3VXAwNivKMAh1rc0ykqTLTaGKdx1a+mbC9yWXXxCj1jSG1vTvIJXpqmf
+        EjJiRexXGuDX4LBQ6qrwJADfe/xIt+74s9Gj54tP8UHOqti3NFkMrjtBy2C1HiUzIh4rxmSLK0V2SW9s
+        WniNiXoE8FzWL92lK2O/0gBfWvk2UVaU7IuSU/rNDWxrXcujrDTAW1a+V5QVBRjgDPEnwMfA1YozYr+i
+        AHvbxyVRVhpglpWv9Sw2w5Gasrtl2pCotxnAqfbxgSgrTbbW7jYFBWztgkhVPC2d0U4kS9FNirLSKMqy
+        8kVRFnFmWPzkokaZ9qN1zYp2IsBr7ntYlJVGRUzgBxvYOcoTwAHuI8d7nB9sBrBdNgn7R3kC2MV99DUY
+        EOWVANxnI1dFWQJ4wX2mRFmryJ51Nk17+UUq7omyygAOtBFVaTZtID/ecn0ySydMEg7FVVEWxzaQq3qk
+        tYLYL8orBVhgQ6rTqfzVVbl1gnKxZRfGcWUBLrJu2eiqCMk2cHGWpJ0fx1WKZ/pdG0soM6z3w5k+/qCO
+        TQ+2kSrOsqXjvFQm3qklGZIAjrAhrb9V+0+3nSYhOXdGHFcVLrsL2ZJNIR+0+SIla0fHcZUBjLKRz4Ed
+        FRpnkyAUHNVWsPRjlu8dkO097It8EiPjuMpw9KVFidCtLsMHZQ6pUKqSWZ0tFWOFXsryQb4I+VY4Oi0E
+        MMgvQPFpFiR1AtmWD0I+DYr+1oIn4b3MEdXq7gTuaFOTrUWZffnSnosXDlKUIleiYnyUtwt/DeSDfGm4
+        DacWgBs88zOirN0At9uXyrLV3QI8aaMzgWtDU5x/VpW3pPcZSqd0R3vyQTwRx9UGsNBG14WWy4dmY07z
+        +iFGe7Gpz7hs3Gjgm6i8AQvXOFg32QTc4j07eVPeYJ7lih61q2Ngk6RqM7TbTGOGZpGglrvSHe3JB9GR
+        CdgnyoTXC6mQMkl5RP+tuyJmfGJL2+E05kr/vWYjRkQ+uE9HJkDRX7yA1BQoifuzCVDW9vBuWsrsaozG
+        CumK+lNLEWhHJqAn3OWoLV1YT9AzrzHaBtdT2joBKSTWDu/4Esub9vN0ldJdtlKqTMvVdTX1OdhjhltH
+        1Js3+SAWRD9rI/v0nB9l7Qa4wL7UszGiEVlYqizNblHeLlwLTFtjTo/y2vBmqWdsWCWzVxrcynU32Uzl
+        OqXgawvDG+IS9xw70Enkw0bRv7YATLcT+ilM/il70+eVx4ufuaIt5QKlMz8vm2J69KttZBMwIZxPK8FR
+        +flWyLJQ88L5Cb1hAlK+XhFZ2jKrjQrpVx6lQ1QvdoR0dv0OwStN5QVEZfWHwvgtnH4QpQ3Lqsqk45ea
+        LV+L4ItNGSjplg3ZEsoDjIhj2gpwXJaRFQp6tJgZGvu2CrCDU+ApoPrL5fqGmyY6gipFvv3rqcv9Y0P7
+        CmRjrapUH3300RJ/AwBhBvb0zEVVAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
